test/libhyperion/syntaxTests/functionTypes/call_value_on_non_payable_function_type.hyp
contract C {
    function (uint) external returns (uint) x;
    function f() public {
        x{value: 2}(1);
    }
}
// ----
// TypeError 4888: (17-58): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
